// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. key facts with title 1`] = `
<div
  className="responsive-styles__component-fbPFZZ dyyjqL"
>
  <div
    className="responsive-styles__component-fbPFZZ VvueK"
  >
    EXAMPLE TITLE
  </div>
  <div
    className="responsive-styles__component-fbPFZZ llrYRA"
  >
    <div>
      <div />
      <div>
        Example bullet text
      </div>
    </div>
    <div>
      <div />
      <div>
        An example 
        <a
          href="https://www.thetimes.co.uk/test/link"
          role="link"
        >
          link
        </a>
      </div>
    </div>
    <div>
      <div />
      <div>
        More example text.
      </div>
    </div>
    <div>
      <div />
      <div>
        Example text 
        <strong>
          this is bold 
        </strong>
        <em>
          this is in italics.
        </em>
      </div>
    </div>
  </div>
</div>
`;

exports[`2. key facts without title 1`] = `
<div
  className="responsive-styles__component-fbPFZZ dyyjqL"
>
  <div
    className="responsive-styles__component-fbPFZZ llrYRA"
  >
    <div>
      <div />
      <div>
        Example bullet text
      </div>
    </div>
    <div>
      <div />
      <div>
        An example 
        <a
          href="https://www.thetimes.co.uk/test/link"
          role="link"
        >
          link
        </a>
      </div>
    </div>
    <div>
      <div />
      <div>
        More example text.
      </div>
    </div>
    <div>
      <div />
      <div>
        Example text 
        <strong>
          this is bold 
        </strong>
        <em>
          this is in italics.
        </em>
      </div>
    </div>
  </div>
</div>
`;
